# vulkan-forge

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  __init__.py  build.py  cibuildwheel.toml  fix_all_10_errors.py  pyproject.toml  pytest.ini  quick_fix.py.py  requirements-build.txt  run_example.py  run_pointcloud.py  run_tests_filtered.py  run_working_tests.py  setup.cfg  setup.py  test_direct_import.py  test_import.py  test_summary.py  test_terrain.tif  test_vulkan.py  test_vulkan_renderer.py
.github/workflows/: build-wheels.yml  ci.yml  release.yml  test-wheels.yml
assets/: shader_color.frag.spv  shader_passthrough.vert.spv
cpp/: CMakeLists.txt
cpp/assets/: shader_passthrough.vert.spv
cpp/cmake/: SpirvToHeader.cmake
cpp/include/: CMakeLists.txt
cpp/include/shaders/: height_field.frag.h  height_field.vert.h
cpp/include/vf/: gpu_quadtree.hpp  heightfield_scene.hpp  mesh_loader.hpp  mesh_pipeline.hpp  numpy_bridge.hpp  renderer.hpp  terrain_memory_pool.hpp  terrain_renderer.hpp  terrain_tile.hpp  tessellation_pipeline.hpp  vk_common.hpp  vma_util.hpp
cpp/python/vulkan_forge/: __init__.py
cpp/shaders/: fragment.glsl  height_field.frag  height_field.vert  shader_color.frag.glsl  shader_color.frag.inc  shader_passthrough.vert.glsl  shader_passthrough.vert.inc  vertex.glsl
cpp/shaders/terrain/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert  terrain_wireframe.frag
cpp/src/: bindings.cpp  gpu_quadtree.cpp  heightfield_scene.cpp  mesh_loader.cpp  mesh_pipeline.cpp  renderer.cpp  simple_renderer.cpp  terrain_memory_pool.cpp  terrain_renderer.cpp  terrain_tile.cpp  tessellation_pipeline.cpp  vertex_buffer.cpp  vk_common.cpp  vma_util.cpp
examples/: 01_render_cube.py  02_numpy_pointcloud.py  03_numpy_mesh.py  04_numpy_update_live.py  05_numpy_compute.py  06_basic_mesh.py  07_load_geotiff_basic.py  08_terrain_performance.py  09_terrain_viewer.py  10_terrain_gpu_render.py  10_terrain_gpu_render_COMPLETE.py  10_terrain_gpu_render_FINAL.py  10_terrain_gpu_render_FINAL_FIX.py  10_terrain_gpu_render_FINAL_VERIFIED.py  10_terrain_gpu_render_WORKING.py  10_terrain_gpu_render_fixed.py  FINAL_FIX_SUMMARY.md  MAKE_IT_MATCH_COMPLETE.md  TERRAIN_FIX_SUMMARY.md  basic_example.py  compare_heightmaps.py  debug_mesh_render.py  demo_simple_render.py  demonstrate_fix.py  render_cube_cpu.py  simple_example.py  terrain_crisp_demo.py  terrain_demo.py  terrain_gpu_demo.py  terrain_plot.py  test_vulkan_forge.py
man/bindings/: CMakeLists.txt
python/: __init__.py  _vulkan_forge_editable.py  core.py  demo.py  demo_heightmap.py  heightmap.py  pyproject.toml  renderer.py  setup.py
python/loaders/: __init__.py  coordinate_systems.py  geotiff_loader.py  mesh_formats.py  obj_loader.py  terrain_cache.py
python/vulkan_forge/: __init__.py  backend.py  compile_shaders.py  coordinate_systems.py  core.py  heightmap.py  matrices.py  mesh.py  mesh_io.py  numpy_buffer.py  perf_helpers.py  renderer.py  shader_compiler.py  terrain.py  terrain_cache.py  terrain_config.py  terrain_renderer.py  tools.py  vertex_format.py  vertex_input.py  vulkan_forge_native.py
python/vulkan_forge/loaders/: __init__.py  geotiff.py
python/vulkan_forge/shaders/: compile.py  compile_all_shaders.py  embedded_spirv.py  fragment.glsl  fragment.spv  point_fragment.glsl  point_vertex.glsl  vertex.glsl  vertex.spv
python/vulkan_forge/terrain/: __init__.py  cache.py  colormap.py  config.py  coords.py  data.py  plot3d.py
python/vulkan_forge/testing/: __init__.py  performance.py  validation.py
scripts/: debug-installation.py  install-vulkan-sdk.bat  install-vulkan-sdk.sh  test-install.py
src/: main.cpp
src/vulkan_forge/: __init__.py  backend.py  matrices.py  renderer.py
src/vulkan_forge/shaders/: fragment.glsl  vertex.glsl
tests/: __init__.py  add_debug_print.py  conftest.py  debug_imports.py  debug_imports_local.py  detailed_test.py  diagnose_import.py  mock_classes.py  simple_test.py  test_3d_cube.py  test_cpu_indices.py  test_crisp_render.py  test_integration.py  test_mesh_loading.py  test_mocks.py  test_multibuffer_cpu.py  test_numpy_formats.py  test_numpy_integration.py  test_numpy_memory_safety.py  test_numpy_performance.py  test_obj_loader.py  test_performance.py  test_pointcloud_render.py  test_renderer.py  test_vma_integration.py  test_vulkan_setup.py
tests/cli/: conftest.py  test_geotiff_loader.py  test_memory_management.py  test_terrain_cli_tools.py  test_terrain_config.py  test_terrain_pipeline.py  test_tesselation_shaders.py
tests/cpp/: test_terrain_renderer.cpp
