# ============================================================================
# pyproject.toml - Fixed Python packaging for vulkan-forge
# ============================================================================
# Uses simple setuptools for now to avoid scikit-build-core complexity
# This ensures error-free installation while we test the CI/CD infrastructure
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel", "numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulkan-forge"
version = "0.1.0"
authors = [
    {name = "VulkanForge Team", email = "team@vulkanforge.dev"},
]
description = "High-performance GPU renderer for height fields using Vulkan"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

keywords = [
    "vulkan", "rendering", "gpu", "3d", "visualization", 
    "height-field", "terrain", "graphics", "compute"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.19.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/vulkanforge/vulkan-forge"
Repository = "https://github.com/vulkanforge/vulkan-forge.git"
"Bug Tracker" = "https://github.com/vulkanforge/vulkan-forge/issues"

[project.scripts]
vf-test = "vulkan_forge.tools:main"

# ============================================================================
# Setuptools configuration
# ============================================================================
[tool.setuptools]
package-dir = {"" = "python"}
packages = ["vulkan_forge"]

[tool.setuptools.package-data]
vulkan_forge = ["*.py"]

# ============================================================================
# Development tools configuration
# ============================================================================
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]