[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulkan-forge"
version = "0.1.0"
authors = [{ name = "VulkanForge Team" }]
description = "Multi-GPU renderer with automatic CPU fallback"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.19.0",
    "pillow>=8.0.0", 
    "vulkan>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=23.0", "flake8>=6.0", "mypy", "pytest-benchmark>=4.0.0"]

[project.scripts]
vf-compile-shaders = "vulkan_forge.compile_shaders:main"

[project.urls]
Homepage = "https://github.com/yourusername/vulkan-forge"
BugTracker = "https://github.com/yourusername/vulkan-forge/issues"

###############################################################################
# Setuptools configuration
###############################################################################
[tool.setuptools]
package-dir = { "" = "python" }
packages = ["vulkan_forge"]

[tool.setuptools.package-data]
vulkan_forge = [
    "shaders/*.glsl",
    "shaders/*.vert", 
    "shaders/*.frag",
    "shaders/*.spv",
    "shaders/embedded_spirv.py",
]